Opened 16 years ago
Closed 16 years ago
#4069 closed bug (fixed)
[screen_blanker] Keys/Key Combos that Don't Generate a KeyDown() Don't Quit the Blanker
Reported by: | bonefish | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Command Line Tools | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Pressing just a modifier doesn't quit the screen blanker. The same holds for any key combo that doesn't generate a KeyDown(). E.g. one can switch workspaces with the screen blanker happily continuing.
Change History (2)
comment:1 by , 16 years ago
Status: | new → assigned |
---|
comment:2 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
That probably happened when Ryan moved quitting the screen blanker to the application.