* We also need to listen to modifier changes and unmapped keys in order to quit   the blanker. This is a regression introduced with r29488. * This fixes bug #4069.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31441 a95241bf-73f2-0310-859d-f6bbb57e9c96